syntax = "proto3";
package seiprotocol.seichain.dex;

import "gogoproto/gogo.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

message Pair {
    string priceDenom = 1 [
        (gogoproto.jsontag) = "price_denom"
    ];
    string assetDenom = 2 [
        (gogoproto.jsontag) = "asset_denom"
    ];
    string priceTicksize = 3 [
        (gogoproto.jsontag) = "price_tick_size",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = true
    ];
    string quantityTicksize = 4 [
        (gogoproto.jsontag) = "quantity_tick_size",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = true
    ];
}

message BatchContractPair {
    string contractAddr = 1 [(gogoproto.jsontag) = "contract_addr"];
    repeated Pair pairs = 2 [(gogoproto.jsontag) = "pairs"];
}
